changed java version back to 8, fixed host in frontend properties