@@ -17,6 +17,7 @@ import org.springframework.http.MediaType;
 import org.springframework.test.context.junit4.SpringRunner;
 import org.springframework.test.web.servlet.MockMvc;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.fail;
@@ -61,7 +62,7 @@ public class ListControllerTest {
 
     @Test
     public void getAllCategoryList() throws Exception {
-        when(categoryService.getCategoryList()).thenReturn(List.of(
+        when(categoryService.getCategoryList()).thenReturn(Arrays.asList(
                 new EntityListItem(categoryA.getId(),categoryA.getName()),
                 new EntityListItem(categoryB.getId(),categoryB.getName())
         ));
